--- a/about.html
+++ b/about.html
@@ -12,17 +12,17 @@
 <div class="container">
   <div class="row">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html"><img class="col-lg-7 img-fluid" src="images/green_logo.png" alt="Logo next to Pelvic Health Physical Therapy text"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="col-9 col-md-6 navbar-brand" href="index.html"><img class="img-fluid" src="images/green_logo.png" alt="Logo next to Pelvic Health Physical Therapy text"></a>
+      <button class="col-2 navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
@@ -35,19 +35,71 @@
       </div>
     </nav>
 
+<div id="hello">
+  <h1 class="col-md-8">Hello, I'm Dr. Kerry Winge</h1>
+    <img class="img-fluid" src="images/kerry.png" alt="image of Dr. Kerry Winge with a soft pink circle behind it">
+</div>
+
+<section id="prof">
+<div class="col-12 col-md-5" id="phil">
+  <h2>MY PHILOSOPHY</h2>
+    <p>I believe that both dysfunction and healing are multifactorial. True recovery is only achieved by treating the body as a whole, and providing management tools for ongoing wellness.</p>
+</div>
+
+<div class="col-11" id="education">
+  <h2>EDUCATION</h2>
+    <ul class="list-unstyled">
+      <li>Northeastern University Boston , MA: B.S. in Physical Therapy - 1995</li>
+      <li>Shenandoah University Winchester, VA : Doctorate in Physical Therapy - 2019</li>
+      <li>Board Certification in Women’s Health – ABPTS 2020 </li>
+      <li>Health And Wellness Coach Certification – Real Balance Global Wellness Services</li>
+      <li>Pilates Instructor Mat Certification - Power House Pilates</li>
+      <li>Pilates Instructor Group Class Certification - Power House Pilates</li>
+      <li>Pilates Instructor Reformer Certification-  Power House Pilates</li>
+    </ul>
+  </div>
+
+<div class="col-12" id="exp">
+    <h2>MY PROFESSIONAL EXPERIENCE</h2>
+      <ul class="list-unstyled">
+        <li>Kerry is a registered Physical Therapist and is a designated clinical specialist in Women’s Health, with certifications in Wellness Counseling and Pilates. She has worked in a variety of settings including sports medicine, home healthcare, in-patient,  wound care, and was the Director of Rehabilitation of a multidisciplinary facility. </li>
+        <li><br></li>
+        <li>Kerry’s passion for Pelvic Health began after her personal experience of a mismanaged labor resulting in pelvic floor trauma. She witnessed that there were not any resources to assist in her healing.  She studied and applied the knowledge that she obtained in addition to developing her own techniques, and was able to heal herself. Her mission is to treat these disorders and transfer her knowledge to empower women, so that they can live their life without pain.</li>
+      </ul>
+  </div>
+</section>
+
+<article class="col-12" id="hobbies">
+  <h2>HOBBIES</h2>
+    <p class="col-md-6"> Kerry lives in Morgantown with her husband, three children and two dogs. In her spare time she enjoys working out, cooking, boating, and traveling.</p>
+</article>
+
+<article class="col-12" id="test">
+  <h2>TESTIMONIALS</h2>
+    <ul class="col-md-10 list-unstyled">
+      <li>"When I was first referred to Dr. Kerry Winge, I was easily at the lowest point of my life. Countless unsuccessful treatments, surgeries, and traumatizing past physical therapy attempts were all under my belt. I was convinced that no one would be able to help me feel better. When I met Kerry I knew that something would be different just from our first session. She has given me the tools and help that I’ve been longing for since I was diagnosed at 18. Now at 22, I have progressed in ways I never thought I would. Kerry has helped me regain aspects of my life that I thought were gone. She has helped remind me that healing isn’t linear, and that management is huge part of the process. I am forever grateful to her for giving me hope once again." </li>
+      <li><br></li>
+      <li>Emily D.</li>
+    </ul>
+    <ul class="col-md-10 list-unstyled">
+      <li><br></li>
+      <li>"Before physical therapy with Dr. Kerry Winge I was hopeless: I felt that not having sexual pain would never be an option for me. Once working with Dr. Winge and progressing through therapy, I was able to make great improvements at the office and with at home techniques she suggested. After only five months of treatment, I now have my life back and can live like a normal college student! Dr. Kerry Winge is absolutely the best, at such an uncomfortable time in my life she made me feel normal and not broken. Throughout the journey she was always only a text or phone call away! I am so thankful for this experience and to have her help me overcome it and take back my life!"</li>
+      <li><br></li>
+      <li>Kylie P.</li>
+    </ul>
+    <ul class="col-md-10 list-unstyled">
+      <li><br></li>
+      <li>"Pelvic floor physical therapy changed my life. I am not exaggerating. I thought my pain and muscular dysfunction was in my head, and something that I would just have to deal with for the rest of my life… until I was referred to Dr. Kerry Winge by my doctor. She was prompt in calling me to set up an appointment and I have been better ever since! I even noticed results after the first session. From there, my condition only improved. It even surpassed my expectations. I just didn’t have pain; now, I actually feel “good!” At first, I was scared and skeptical. I didn’t know this type of therapy existed-- or that I needed it. You are in good hands with Dr. Winge! After every session with her, I felt both mentally and physically relaxed. She has a very calming, reassuring presence. She is the best person for this type of therapy!"</li>
+      <li><br></li>
+      <li>Mary F.</li>
+    </ul>
+</article>
 
 
-
-
-    <footer>
-      <img src="images/light_pink_logo.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
-        <ul>
-          <li>address</li>
-          <li>phone</li>
-          <li>fax</li>
-          <li>email</li>
-          </ul>
-    </footer>
+<footer>
+  <img class="col-2 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
+  <a href="contact.html">CONTACT US</a>
+</footer>
 
   </div><!--closes row-->
   </div><!--closes container-->
