--- a/contact.html
+++ b/contact.html
@@ -12,14 +12,14 @@
 <div class="container">
   <div class="row">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html"><img class="col-lg-7 img-fluid" src="images/green_logo.png" alt="Logo next to Pelvic Health Physical Therapy text"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="col-9 col-md-6 navbar-brand" href="index.html"><img class="img-fluid" src="images/green_logo.png" alt="Logo next to Pelvic Health Physical Therapy text"></a>
+      <button class="col-2 navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
@@ -28,26 +28,55 @@
           <li class="nav-item">
             <a class="nav-link" href="resources.html">Resources</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
 
+<section class="col-12" id="appt">
+  <h1>REQUEST AN APPOINTMENT</h1>
+    <p>Physical Therapy can help with the following:</p>
+      <ul class="list-unstyled col-md-6 float-md-left">
+        <li>Bowel Incontinence</li>
+        <li>Breast Cancer rehabilitation</li>
+        <li>Constipation</li>
+        <li>Pediatric Pelvic Health</li>
+        <li>Fibromyalgia</li>
+        <li>Orthopedics</li>
+        <li>Osteoporosis</li>
+        <li><br></li>
+      </ul>
+      <ul class="list-unstyled col-md-6 float-md-right" id="secondlist">
+        <li>Pelvic Pain</li>
+        <li>Urinary Incontinence</li>
+        <li>Pregnancy and Post-Partum</li>
+        <li>Women’s Health</li>
+        <li>Dyspareunia (painful intercourse)</li>
+        <li>Diastasis Rectus Abdominis</li>
+        <li>Musculoskeletal Dysfunction</li>
+      </ul>
+
+</section>
+
+<div class="col-12" id="form">
+  <form>
+  <label for="name">Name</label><br>
+  <input type="text" id="name" name="name"><br>
+  <label for="email">Email</label><br>
+  <input type="text" id="email" name="email"><br>
+  <label for="message">Message</label><br>
+  <textarea id="message" name="message"></textarea><br>
+  <input type="submit" id="submit" value="Submit">
+</form>
+</div>
 
 
-
-
-    <footer>
-      <img src="images/light_pink_logo.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
-        <ul>
-          <li>address</li>
-          <li>phone</li>
-          <li>fax</li>
-          <li>email</li>
-          </ul>
-    </footer>
+<footer>
+  <img class="col-2 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
+  <a href="contact.html">CONTACT US</a>
+</footer>
 
   </div><!--closes row-->
   </div><!--closes container-->
