--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="row">
 
     <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="col-9 col-md-6 navbar-brand" href="index.html"><img class="img-fluid" src="images/green_logo.png" alt="Logo next to Pelvic Health Physical Therapy text"></a>
+      <a class="col-9 col-md-6 col-lg-4 navbar-brand" href="index.html"><img class="img-fluid" src="images/green_logo.png" alt="Logo next to Pelvic Health Physical Therapy text"></a>
       <button class="col-2 navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -105,29 +105,33 @@
 
 <section class="col-12" id="help">
   <h2 class="col-12 ">HOW I CAN HELP</h2>
-    <ul class="col-11 col-md-6 list-unstyled float-md-left">
+    <ul class="col-11 col-md-6 col-lg-3 list-unstyled float-md-left">
       <li>LISTENING</li>
+      <li><br></li>
       <li>Tell me what is going on and how this problem is affecting your life. On average, patients have been to 3-4 practitioners prior to coming in to see me. I want my clinicto be your last stop.</li>
     </ul>
-    <ul class="col-11 col-md-6 list-unstyled float-md-right">
+    <ul class="col-11 col-md-6 col-lg-3 list-unstyled float-md-right">
       <li>EVALUATION</li>
+      <li><br></li>
       <li>I will evaluate your condition with only necessary tests and measures to make a definitive diagnosis. You are already uncomfortable, so I am only going to gather the information necessary to identify the root of your problem.</li>
     </ul>
-    <ul class="col-11 col-md-6 list-unstyled float-md-left" id="plan">
+    <ul class="col-11 col-md-6 col-lg-3 list-unstyled float-md-left" id="plan">
       <li>PLANNING</li>
+      <li><br></li>
       <li>Once a diagnosis is made, I will explain the different tools that can be individually combined to treat your condition. Together, we will develop a plan that will meet all your goals.</li>
     </ul>
-    <ul class="col-11 col-md-6 list-unstyled float-md-right">
+    <ul class="col-11 col-md-6 col-lg-3 list-unstyled float-md-right">
       <li>TREATMENT</li>
+      <li><br></li>
       <li>There are three options for private, one-on-one treatment. In person, Telehealth, or a hybrid model that combines both in-clinic and Telehealth. Treatment time is 1 hour on average. Duration of treatment is based in how quickly your goals are accomplished.</li>
     </ul>
 </section>
 
-<div class="col-12 col-md-6" id="request">
+<div class="col-11 col-md-6 col-lg-5" id="request">
   <a class="col-6" href="contact.html">REQUEST AN APPOINTMENT</a>
 </div>
 
-<article class="col-12" id="insurance">
+<article class="col-12 col-lg-6" id="insurance">
   <ul class="list-unstyled">
     <li>INSURANCE AND BILLING</li>
     <li><br></li>
@@ -135,7 +139,7 @@
   </ul>
   </article>
 
-  <div class="col-12" id="test1">
+  <div class="col-12 col-lg-6" id="test1">
     <ul class=" col-9 col-md-7 list-unstyled">
       <li> At first, I was scared and skeptical. I didn’t know this type of therapy existed — or that I needed it. You are in good hands with Dr. Winge!</li>
       <li><br></li>
@@ -144,7 +148,7 @@
   </div>
 
 <footer class="col-12">
-  <img class="col-3 col-md-2 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
+  <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
   <a href="contact.html">CONTACT US</a>
 </footer>
 
