--- a/resources.html
+++ b/resources.html
@@ -13,7 +13,7 @@
   <div class="row">
 
     <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="col-9 col-md-6 navbar-brand" href="index.html"><img class="img-fluid" src="images/green_logo.png" alt="Logo next to Pelvic Health Physical Therapy text"></a>
+      <a class="col-9 col-md-6 col-lg-4 navbar-brand" href="index.html"><img class="img-fluid" src="images/green_logo.png" alt="Logo next to Pelvic Health Physical Therapy text"></a>
       <button class="col-2 navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -25,7 +25,7 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="resources.html">Resources</a>
           </li>
           <li class="nav-item">
@@ -39,73 +39,43 @@
 <section class="col-12" id="resources">
   <h1 class="col-6">RESOURCES</h1>
 
-    <!--<ul class="list-unstyled" id="lpink">
-      <li><img class="img-fluid" src="images/apta.png" alt="Physical Therapy Section on Women's Health logo"></li>
-      <li><a href="https://aptapelvichealth.org/patienteducation/">Physical Therapy Section on Women's Health – (APTA)</a></li>
-    </ul>
-
-    <ul class="col-md-6 list-unstyled" id="pink">
-      <li><img class="img-fluid" src="images/international.png" alt="International Pelvic Pain Society logo"></li>
-      <li><a href="https://www.pelvicpain.org/IPPS/Content/Professional/Patient_Handouts.aspx">International Pelvic Pain Society - (IPPS)</a></li>
-    </ul>
-
-    <ul class="col-md-6 list-unstyled" id="lpink2">
-      <li><img class="img-fluid" src="images/augs.png" alt="American Urgogynecologic Society Patient Resources logo"></li>
-      <li><a href="https://www.augs.org">American Urgogynecologic Society Patient Resources - (AUGS)</a></li>
-      <li><a href="https://www.voicesforpfd.org/">Voices for VPD</a></li>
-    </ul>
-
-    <ul class="col-md-6 list-unstyled" id="pink2">
-      <li><img class="img-fluid" src="images/nafc.png" alt="The National Association for Continence logo"></li>
-      <li></li>
-      <li><a href="https://www.nafc.org/the-oab-resource-center">The National Association for Continence – (NAFC)</a></li>
-    </ul>
-
-    <ul class="col-md-6 list-unstyled" id="lpink3">
-      <li><img class="img-fluid" src="images/acog.png" alt="The American College of Obstetricians and Gynecologists logo"></li>
-      <li><a href="https://www.acog.org/womens-health">The American College of Obstetricians and Gynecologists – (ACOG)</a></li>
-    </ul>
-
-    <ul class="col-md-6 list-unstyled" id="pink3">
-      <li><a href="https://www.acog.org/womens-health/faqs/exercise-during-pregnancy">Exercise and pregnancy- (ACOG)</a></li>
-    </ul>-->
 </section>
 
 <div class="card-columns">
   <div class="card mt-2 mb-3">
     <div class="card-body">
       <img class="img-fluid" src="images/apta.png" alt="Physical Therapy Section on Women's Health logo">
-      <a class="card-title" href="https://aptapelvichealth.org/patienteducation/">Physical Therapy Section on Women's Health – (APTA)</a>
+      <a class="card-title" target="_blank" href="https://aptapelvichealth.org/patienteducation/">Physical Therapy Section on Women's Health – (APTA)</a>
     </div>
   </div>
   <div class="card p-3 mb-3">
     <div class="card-body">
       <img class="img-fluid" src="images/international.png" alt="International Pelvic Pain Society logo">
-      <a class="card-title" href="https://www.pelvicpain.org/IPPS/Content/Professional/Patient_Handouts.aspx">International Pelvic Pain Society - (IPPS)</a>
+      <a class="card-title" target="_blank" href="https://www.pelvicpain.org/IPPS/Content/Professional/Patient_Handouts.aspx">International Pelvic Pain Society - (IPPS)</a>
     </div>
   </div>
   <div class="card mb-3">
     <div class="card-body">
       <img class="img-fluid" src="images/augs.png" alt="American Urgogynecologic Society Patient Resources logo">
-      <a class="card-title" href="https://www.augs.org">American Urgogynecologic Society Patient Resources - (AUGS)</a>
-      <a class="card-title" href="https://www.voicesforpfd.org/">Voices for VPD</a>
+      <a class="card-title" target="_blank" href="https://www.augs.org">American Urgogynecologic Society Patient Resources - (AUGS)</a>
+      <a class="card-title" target="_blank" href="https://www.voicesforpfd.org/">Voices for VPD</a>
     </div>
   </div>
-  <div class="card blue lighten-2 text-white text-center p-3 mt-2 mb-3">
+  <div class="card p-3 mt-2 mb-3">
     <div class="card-body">
       <img class="img-fluid" src="images/nafc.png" alt="The National Association for Continence logo">
-      <a class="card-title" href="https://www.nafc.org/the-oab-resource-center">The National Association for Continence – (NAFC)</a>
-    </div>
-  </div>
-  <div class="card text-center mb-3">
-    <div class="card-body">
-      <img class="img-fluid" src="images/acog.png" alt="The American College of Obstetricians and Gynecologists logo">
-      <a class="card-title" href="https://www.acog.org/womens-health">The American College of Obstetricians and Gynecologists – (ACOG)</a>
+      <a class="card-title" target="_blank" href="https://www.nafc.org/the-oab-resource-center">The National Association for Continence – (NAFC)</a>
     </div>
   </div>
   <div class="card mb-3">
     <div class="card-body">
-      <a class="card-title" href="https://www.acog.org/womens-health/faqs/exercise-during-pregnancy">Exercise and pregnancy- (ACOG)</a>
+      <img class="img-fluid" src="images/acog.png" alt="The American College of Obstetricians and Gynecologists logo">
+      <a class="card-title" target="_blank" href="https://www.acog.org/womens-health">The American College of Obstetricians and Gynecologists – (ACOG)</a>
+    </div>
+  </div>
+  <div class="card mb-3">
+    <div class="card-body">
+      <a class="card-title" target="_blank" href="https://www.acog.org/womens-health/faqs/exercise-during-pregnancy">Exercise and pregnancy- (ACOG)</a>
     </div>
   </div>
 </div>
@@ -113,7 +83,7 @@
 
 
 <footer>
-  <img class="col-2 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
+  <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
   <a href="contact.html">CONTACT US</a>
 </footer>
 
