--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <div class="row">
 
     <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="col-9 col-md-6 navbar-brand" href="index.html"><img class="img-fluid" src="images/green_logo.png" alt="Logo next to Pelvic Health Physical Therapy text"></a>
+      <a class="col-9 col-md-6 col-lg-4 navbar-brand" href="index.html"><img class="img-fluid" src="images/green_logo.png" alt="Logo next to Pelvic Health Physical Therapy text"></a>
       <button class="col-2 navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,14 +28,14 @@
           <li class="nav-item">
             <a class="nav-link" href="resources.html">Resources</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
 
-<section class="col-12" id="appt">
+<section class="col-12 float-lg-left col-lg-6" id="appt">
   <h1>REQUEST AN APPOINTMENT</h1>
     <p>Physical Therapy can help with the following:</p>
       <ul class="list-unstyled col-md-6 float-md-left">
@@ -48,7 +48,7 @@
         <li>Osteoporosis</li>
         <li><br></li>
       </ul>
-      <ul class="list-unstyled col-md-6 float-md-right" id="secondlist">
+      <ul class="list-unstyled col-md-6 col-lg-12 float-md-right" id="secondlist">
         <li>Pelvic Pain</li>
         <li>Urinary Incontinence</li>
         <li>Pregnancy and Post-Partum</li>
@@ -60,7 +60,7 @@
 
 </section>
 
-<div class="col-12" id="form">
+<div class="col-12 col-lg-6 float-lg-right" id="form">
   <form>
   <label for="name">Name</label><br>
   <input type="text" id="name" name="name"><br>
@@ -74,7 +74,7 @@
 
 
 <footer>
-  <img class="col-2 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
+  <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
   <a href="contact.html">CONTACT US</a>
 </footer>
 
