--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </ul>
 </section>
 
-<div class="col-11 col-md-6 col-lg-5" id="request">
+<div class="col-11 col-md-6 col-lg-5 col-xl-4" id="request">
   <a class="col-6" href="contact.html">REQUEST AN APPOINTMENT</a>
 </div>
 
