--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
@@ -62,7 +62,7 @@
 </section>
 
 <div class="col-12 col-lg-6 float-lg-right" id="form">
-  <form>
+  <form action="contact.php" method="post" enctype="plain">
   <label for="name">Name</label><br>
   <input type="text" id="name" name="name"><br>
   <label for="email">Email</label><br>
