--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     </nav>
 
 <div id="hello">
-  <h1 class="col-md-8 col-lg-10">Hello, I'm Dr. Kerry Winge</h1>
+  <h1 class="col-md-8 col-lg-10">Hello, I'm <br>Dr. Kerry Winge</h1>
     <img class="img-fluid" src="images/kerry.png" alt="image of Dr. Kerry Winge with a soft pink circle behind it">
 </div>
 
