--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Pelvic Health Physical Therapy</title>
+    <title>contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/vie3drk.css">
@@ -69,14 +69,15 @@
   <input type="text" id="email" name="email"><br>
   <label for="message">Message</label><br>
   <textarea id="message" name="message"></textarea><br>
-  <input type="submit" id="submit" value="Submit">
+  <input type="submit" id="submit" value="submit">
 </form>
 </div>
 
 
 <footer>
   <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
-  <a href="contact.html">CONTACT US</a>
+  <a href="contact.html">Contact us!</a>
+  <p class="col-12">Reach out and send us an email <a href="mailto:kwinge17@gmail.com"><span>here.</span></a></p>
 </footer>
 
   </div><!--closes row-->
