contact me on other pages

--- a/about.html
+++ b/about.html
@@ -98,6 +98,7 @@
 <footer>
   <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
   <a href="contact.html">CONTACT US</a>
+  <p class="col-12">Reach out and send us an email <a href="mailto:kwinge17@gmail.com"><span>here.</span></a></p>
 </footer>
 
   </div><!--closes row-->
