--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>home</title>
+    <title>Pelvic Health - home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/vie3drk.css">
@@ -27,6 +27,9 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="services.html">Services</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="resources.html">Resources</a>
           </li>
           <li class="nav-item">
@@ -37,111 +40,45 @@
     </nav>
 
 <header class="col-12">
-  <h3 class="col-11 col-md-7">"Kerry has helped me regain aspects of my life that I thought were gone. She has helped remind me that healing isn’t linear, and that management is huge part of the process. I am forever grateful to her for giving me hope once again."</h3>
+  <h3 class="col-11 col-md-9 col-lg-7">"Dr. Winge has helped me regain aspects of my life that I thought were gone. She has helped remind me that healing isn’t linear, and that management is huge part of the process. I am forever grateful to her for giving me hope once again."</h3>
   <p>Emily D.</p>
   </header>
 
 
-
-  <!--<div class="accordion .d-none .d-sm-block .d-md-none" id="accordionExample">
-  <div class="card">
-    <div class="card-header" id="headingOne">
-      <h2 class="mb-0">
-        <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          LISTEN
-        </button>
-      </h2>
-    </div>
-
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-      <div class="card-body">
-        Tell me what is going on and how this problem is affecting your life. On average, patients have been to 3-4 practitioners prior to coming in to see me. I want my clinicto be your last stop.
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingTwo">
-      <h2 class="mb-0">
-        <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          EVALUATION
-        </button>
-      </h2>
-    </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-      <div class="card-body">
-        I will evaluate your condition with only necessary tests and measures to make a definitive diagnosis. You are already uncomfortable, so I am only going to gather the information necessary to identify the root of your problem.
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingThree">
-      <h2 class="mb-0">
-        <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          PLAN
-        </button>
-      </h2>
-    </div>
-    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-      <div class="card-body">
-        Once a diagnosis is made, I will explain the different tools that can be individually combined to treat your condition. Together, we will develop a plan that will meet all your goals.
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingFour">
-      <h2 class="mb-0">
-        <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
-          TREATMENT
-        </button>
-      </h2>
-    </div>
-
-    <div id="collapseFour" class="collapse show" aria-labelledby="headingFour" data-parent="#accordionExample">
-      <div class="card-body">
-        There are three options for private, one-on-one treatment. In person, Telehealth, or a hybrid model that combines both in-clinic and Telehealth. Treatment time is 1 hour on average. Duration of treatment is based in how quickly your goals are accomplished.
-      </div>
-    </div>
-  </div>
-</div>-->
-
-<section class="col-12" id="help">
-  <h2 class="col-12 ">HOW I CAN HELP</h2>
-    <ul class="col-11 col-md-6 col-lg-3 list-unstyled float-md-left">
-      <li>LISTENING</li>
-      <li><br></li>
-      <li>Tell me what is going on and how this problem is affecting your life. On average, patients have been to 3-4 practitioners prior to coming in to see me. I want my clinicto be your last stop.</li>
-    </ul>
-    <ul class="col-11 col-md-6 col-lg-3 list-unstyled float-md-right">
-      <li>EVALUATION</li>
-      <li><br></li>
-      <li>I will evaluate your condition with only necessary tests and measures to make a definitive diagnosis. You are already uncomfortable, so I am only going to gather the information necessary to identify the root of your problem.</li>
-    </ul>
-    <ul class="col-11 col-md-6 col-lg-3 list-unstyled float-md-left" id="plan">
-      <li>PLANNING</li>
-      <li><br></li>
-      <li>Once a diagnosis is made, I will explain the different tools that can be individually combined to treat your condition. Together, we will develop a plan that will meet all your goals.</li>
-    </ul>
-    <ul class="col-11 col-md-6 col-lg-3 list-unstyled float-md-right">
-      <li>TREATMENT</li>
-      <li><br></li>
-      <li>There are three options for private, one-on-one treatment. In person, Telehealth, or a hybrid model that combines both in-clinic and Telehealth. Treatment time is 1 hour on average. Duration of treatment is based in how quickly your goals are accomplished.</li>
-    </ul>
+<section class="col-12 col-lg-8 offset-lg-2" id="hi">
+  <ul class="list-unstyled">
+    <li><img class="img-fluid col-9 col-md-5 float-md-right" src="images/kerry.png" alt="Dr. Kerry Winge"></li>
+    <li><h2>Hello, I'm</h2></li>
+    <li><h1>Dr. Kerry Winge</h1></li>
+    <li><p>I believe that both dysfunction and healing are multifactorial. True recovery is only achieved by treating the body as a whole, and providing management tools for ongoing wellness.</p></li>
+  </ul>
 </section>
 
-<div class="col-11 col-md-6 col-lg-5 col-xl-4" id="request">
-  <a class="col-6" href="contact.html">REQUEST AN APPOINTMENT</a>
+
+<div class="col-10 col-md-5 col-lg-5 col-xl-4" id="request">
+  <a class="col-6" href="contact.html">BOOK AN APPOINTMENT</a>
 </div>
 
-<article class="col-12 col-lg-6" id="insurance">
-  <ul class="list-unstyled">
-    <li>INSURANCE AND BILLING</li>
-    <li><br></li>
-    <li>Full service insurance billing is available for both in and out of network providers. MasterCard, Visa, FSA, HSA, and cash payments are accepted. Co-pays are due at the time of visit.</li>
-  </ul>
+<article class="col-12" id="well">
+  <section>
+    <ul class="col-12 list-unstyled">
+      <li><h2 class="col-10 offset-1 col-md-5 col-lg-4">We are here to help!</h2></li>
+      <li><img class="img-fluid col-9 col-md-6 col-lg-4 offset-lg-2 col-xl-3" src="images/dilator.png" alt="light pink dilator pointing at dried roses positioned in the form of a heart"></li>
+      <li><p class="col-xl-7">Pelvic Health Physical Therapy of Morgantown is a clinic specializing in the care and treatment of various orthopedic and neurological problems including a wide range of pelvic disorders. Treatments include one on one personal care in a private, comfortable setting. We are compassionate and determined to help you achieve your individual goals to regain health to live life to the fullest!</p></li>
+    </ul>
+  </section>
   </article>
 
+  <section class="col-12 col-lg-6" id="physical">
+    <div class="col-11" id="greenline1"></div>
+      <h3>Dr. Kerry Winge, PT, DPT, is a physical therapist serving the surrounding areas of Morgantown. She is a board certified Women's Clinical Specialist who has treated thousands of patients over 25 years. Her expertise at treating complex musculoskeletal and global chronic pain conditions, inlcuding sexual dysfunction disorders is unsurpassed.</h3>
+    <div class="col-11" id="greenline2"></div>
+  </section>
+
+
   <div class="col-12 col-lg-6" id="test1">
-    <ul class=" col-9 col-md-7 list-unstyled">
+    <img class="col-10 offset-1 col-md-5 img-fluid offset-lg-0" src="images/linear.png" alt="graphic artwork of Healing isn't linear in green and light pink">
+    <ul class=" col-9 col-md-5 col-lg-6 list-unstyled">
       <li> At first, I was scared and skeptical. I didn’t know this type of therapy existed — or that I needed it. You are in good hands with Dr. Winge!</li>
       <li><br></li>
       <li>Mary F.</li>
@@ -151,7 +88,7 @@
 <footer class="col-12">
   <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
   <a href="contact.html">CONTACT US</a>
-  <p class="col-12">Reach out and send us an email <a href="mailto:kwinge17@gmail.com"><span>here.</span></a></p>
+  <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
 </footer>
 
 
