--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>contact</title>
+    <title>Pelvic Health - contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/vie3drk.css">
@@ -25,6 +25,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="resources.html">Resources</a>
@@ -77,7 +80,7 @@
 <footer>
   <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
   <a href="contact.html">Contact us!</a>
-  <p class="col-12">Reach out and send us an email <a href="mailto:kwinge17@gmail.com"><span>here.</span></a></p>
+  <p>Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
 </footer>
 
   </div><!--closes row-->
