--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <ul class="col-12 list-unstyled">
       <li><h2 class="col-10 offset-1 col-md-5 col-lg-4">We are here to help!</h2></li>
       <li><img class="img-fluid col-9 col-md-6 col-lg-4 offset-lg-2 col-xl-3" src="images/dilator.png" alt="light pink dilator pointing at dried roses positioned in the form of a heart"></li>
-      <li><p class="col-xl-7">Pelvic Health Physical Therapy of Morgantown is a clinic specializing in the care and treatment of various orthopedic and neurological problems including a wide range of pelvic disorders. Treatments include one on one personal care in a private, comfortable setting. We are compassionate and determined to help you achieve your individual goals to regain health to live life to the fullest!</p></li>
+      <li><p class="col-md-5 col-lg-6 col-xl-7">Pelvic Health Physical Therapy of Morgantown is a clinic specializing in the care and treatment of various orthopedic and neurological problems including a wide range of pelvic disorders. Treatments include one on one personal care in a private, comfortable setting. We are compassionate and determined to help you achieve your individual goals to regain health to live life to the fullest!</p></li>
     </ul>
   </section>
   </article>
