--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 </section>
 
 
-<div class="col-10 col-md-5 col-lg-5 col-xl-4" id="request">
-  <a class="col-6" href="contact.html">BOOK AN APPOINTMENT</a>
+<div class="col-10 col-md-5 col-lg-4" id="request">
+  <a class="" href="contact.html">BOOK AN APPOINTMENT</a>
 </div>
 
 <article class="col-12" id="well">
