--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
 
 <img id="bouqet" class="img-fluid col-lg-7" src="images/flower2.png" alt="bouqet of various white flowers with a light pink square on top with lowered opacity">
 
-<section class="col-10 offset-1 col-md-8 col-xl-7" id="flower">
+<section class="col-10 offset-1 col-md-8 col-lg-7" id="flower">
     <h2>Treatment Options</h2>
       <p class="col-lg-8">Dr. Winge offers three separate options for private, one-on-one treatments; or a hybrid model that combines both in-clinic and Telehealth visits. You and Dr. Winge can discuss which option will be the best for you. Each visit typically lasts one hour and the duration of the treatment is based on how quickly your goals are accomplished.</p>
 
